--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             <div class="title col-12 col-md-9">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><strong>Solicita nuestros servicios</strong></h3>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">Contáctanos por nuestros servicios , brindamos atención personalizada.</h4>
-
+                <div class="mbr-section-btn align-center"><a class="btn btn-white display-4" href="index.html#contacts3-18">Contacto</a></div>
             </div>
         </div>
     </div>
