--- a/ranisa.html
+++ b/ranisa.html
@@ -155,7 +155,9 @@
     <div class="container">
         <div class="row align-items-center justify-content-center">
             <div class="text-content col-12 col-md-6">
-                
+                </div>
+            <div class="icons d-flex align-items-center col-12 col-md-6 justify-content-end mt-md-0 mt-2 flex-wrap">
+            </div>
                 
         </div>
     </div>
