--- a/index.html
+++ b/index.html
@@ -89,8 +89,11 @@
         <div class="row align-items-center justify-content-center">
             <div class="text-content col-12 col-md-6">
                 </div>
-                <div class="icons d-flex align-items-center col-12 col-md-6 justify-content-end mt-md-0 mt-2 flex-wrap">
-                </div>
+                  <div class="icons d-flex align-items-center col-12 col-md-6 justify-content-end mt-md-0 mt-2 flex-wrap">
+                <a href="https://twitter.com/mobirise" target="_blank">
+                    <span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
+                </a>
+            </div>
                 
             
         </div>
